# praktikum_smt2

./: .clang-format  .editorconfig  .gitignore  fileio.h  flake.nix  meson.build
include/: admin.h  cashier.h  doubly_linked_list.h  fileio.h  queue.h  type.h  user.h  utils.h
src/: admin.cpp  cashier.cpp  doubly_linked.list.cpp  fileio.cpp  main.cpp  queue.cpp  user.cpp  utils.cpp
