project(
    'restoran pak amba',
    'cpp',
    default_options: ['warning_level=3', 'cpp_std=c++14'],
)

incdir = include_directories('include')
src = [
    'src/main.cpp',
    'src/utils.cpp',
    'src/doubly_linked.list.cpp',
    'src/fileio.cpp',
]

executable('main', src, include_directories: incdir)
